--- a/EXERCICIOS/ex022/fundo006.html
+++ b/EXERCICIOS/ex022/fundo006.html
@@ -10,7 +10,7 @@
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
 
@@ -29,6 +29,15 @@
         <h1>
             Teste de imagem de fundo
         </h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto temporibus pariatur illo. Harum enim atque, reiciendis quos ab veritatis, distinctio est quibusdam id obcaecati eos magnam ea. Dolor, itaque qui. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, tenetur iure, unde iste alias tempora assumenda qui repellendus quibusdam quod eum ea optio dolores laborum voluptatum saepe odio quidem dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, qui et maxime fugit cum excepturi nihil blanditiis? Consequuntur, exercitationem deleniti corrupti reiciendis ipsam, voluptatum vero et, labore dicta quibusdam esse.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto temporibus pariatur illo. Harum enim atque, reiciendis quos ab veritatis, distinctio est quibusdam id obcaecati eos magnam ea. Dolor, itaque qui. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, tenetur iure, unde iste alias tempora assumenda qui repellendus quibusdam quod eum ea optio dolores laborum voluptatum saepe odio quidem dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, qui et maxime fugit cum excepturi nihil blanditiis? Consequuntur, exercitationem deleniti corrupti reiciendis ipsam, voluptatum vero et, labore dicta quibusdam esse.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto temporibus pariatur illo. Harum enim atque, reiciendis quos ab veritatis, distinctio est quibusdam id obcaecati eos magnam ea. Dolor, itaque qui. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, tenetur iure, unde iste alias tempora assumenda qui repellendus quibusdam quod eum ea optio dolores laborum voluptatum saepe odio quidem dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, qui et maxime fugit cum excepturi nihil blanditiis? Consequuntur, exercitationem deleniti corrupti reiciendis ipsam, voluptatum vero et, labore dicta quibusdam esse.
+        </p>
         <p>
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Iusto temporibus pariatur illo. Harum enim atque, reiciendis quos ab veritatis, distinctio est quibusdam id obcaecati eos magnam ea. Dolor, itaque qui. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Architecto, tenetur iure, unde iste alias tempora assumenda qui repellendus quibusdam quod eum ea optio dolores laborum voluptatum saepe odio quidem dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, qui et maxime fugit cum excepturi nihil blanditiis? Consequuntur, exercitationem deleniti corrupti reiciendis ipsam, voluptatum vero et, labore dicta quibusdam esse.
         </p>
