--- a/EXERCICIOS/ex023/tabela002.html
+++ b/EXERCICIOS/ex023/tabela002.html
@@ -27,6 +27,13 @@
         td.num {
             text-align: right;
         }
+
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgrey;
+        }
     </style>
 </head>
 <body>
@@ -34,6 +41,7 @@
     <!-- 
     ANATOMIA PARA TABELAS GRANDES
     TABLE
+        CAPTION
         THEAD
             TR, TD, TH
         TBODY
@@ -43,6 +51,7 @@
     -->
 
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
                 <th>Estado</th>
