--- a/EXERCICIOS/ex025/form003.html
+++ b/EXERCICIOS/ex025/form003.html
@@ -10,10 +10,23 @@
     <form action="cadastro.php" method="get" autocomplete="on">
         <p>
             <label for="inome">Nome</label>
-            <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome completo" autocomplete="name">
+            <input type="text" name="nome" id="inome"  maxlength="30" placeholder="Nome completo" autocomplete="name"required>
         </p>
         <p>
-            <input type="submit" value="">
+            <label for="imedia">Média</label>
+            <input type="number" name="media" id="imedia" min="0" max="10" placeholder="0 a 10" value="5" step="0.1" required>
+        </p>
+        <p>
+            <label for="imes">Perido letivo</label>
+            <input type="month" name="mes" id="imes" value="2024-08" required>
+        </p>
+        <p>
+            <label for="idia">Dia da Prova</label>
+            <input type="date" name="dia" id="idia">
+        </p>
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
         </p>
     </form>
 </body>
